--- a/docs/02-app/01-building-your-application/03-rendering/03-composition-patterns.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/03-composition-patterns.mdx
@@ -46,7 +46,7 @@ For example, take the following data-fetching function:
 export async function getData() {
   const res = await fetch('https://external-service.com/data', {
     headers: {
-      authorization: process.env.API_KEY,
+      authorization: process.env.API_KEY!,
     },
   })
 
