--- a/docs/02-app/01-building-your-application/02-data-fetching/03-forms-and-mutations.mdx
+++ b/docs/02-app/01-building-your-application/02-data-fetching/03-forms-and-mutations.mdx
@@ -296,7 +296,9 @@ const schema = z.object({
 })
 
 export default async function submit(formData: FormData) {
-  const parsed = schema.parse(formData)
+  const parsed = schema.parse({
+    id: formData.get('id'),
+  })
   // ...
 }
 ```
@@ -309,7 +311,9 @@ const schema = z.object({
 })
 
 export default async function submit(formData) {
-  const parsed = schema.parse(formData)
+  const parsed = schema.parse({
+    id: formData.get('id'),
+  })
   // ...
 }
 ```
