--- a/docs/02-app/01-building-your-application/02-data-fetching/03-forms-and-mutations.mdx
+++ b/docs/02-app/01-building-your-application/02-data-fetching/03-forms-and-mutations.mdx
@@ -185,9 +185,31 @@ export default async function submit() {
 }
 ```
 
+```js filename="app/actions.js" switcher
+'use server'
+
+import { revalidatePath } from 'next/cache'
+
+export default async function submit() {
+  await submitForm()
+  revalidatePath('/')
+}
+```
+
 Or invalidate a specific data fetch with a cache tag using [`revalidateTag`](/docs/app/api-reference/functions/revalidateTag):
 
 ```ts filename="app/actions.ts" switcher
+'use server'
+
+import { revalidateTag } from 'next/cache'
+
+export default async function submit() {
+  await addPost()
+  revalidateTag('posts')
+}
+```
+
+```js filename="app/actions.js" switcher
 'use server'
 
 import { revalidateTag } from 'next/cache'
@@ -232,6 +254,19 @@ export default async function handler(req, res) {
 If you would like to redirect the user to a different route after the completion of a Server Action, you can use [`redirect`](/docs/app/api-reference/functions/redirect) and any absolute or relative URL:
 
 ```ts filename="app/actions.ts" switcher
+'use server'
+
+import { redirect } from 'next/navigation'
+import { revalidateTag } from 'next/cache'
+
+export default async function submit() {
+  const id = await addPost()
+  revalidateTag('posts') // Update cached posts
+  redirect(`/post/${id}`) // Navigate to new route
+}
+```
+
+```js filename="app/actions.js" switcher
 'use server'
 
 import { redirect } from 'next/navigation'
@@ -745,6 +780,17 @@ export async function create() {
 }
 ```
 
+```js filename="app/actions.js" switcher
+'use server'
+
+import { cookies } from 'next/headers'
+
+export async function create() {
+  const cart = await createCart():
+  cookies().set('cartId', cart.id)
+}
+```
+
 </AppOnly>
 
 ### Reading Cookies
@@ -789,6 +835,17 @@ export async function create() {
 }
 ```
 
+```js filename="app/actions.js" switcher
+'use server'
+
+import { cookies } from 'next/headers'
+
+export async function create() {
+  const auth = cookies().get('authorization')?.value
+  // ...
+}
+```
+
 </AppOnly>
 
 ### Deleting Cookies
@@ -823,6 +880,17 @@ export default async function handler(req, res) {
 You can delete cookies inside a Server Action using the [`cookies`](/docs/app/api-reference/functions/cookies) function:
 
 ```ts filename="app/actions.ts" switcher
+'use server'
+
+import { cookies } from 'next/headers'
+
+export async function create() {
+  cookies().delete('name')
+  // ...
+}
+```
+
+```js filename="app/actions.js" switcher
 'use server'
 
 import { cookies } from 'next/headers'
