Docs: Update Edge runtime and data revalidation information (#54499)
Fixes: https://vercel.slack.com/archives/C042LHPJ1NX/p1692666204185669

---------

Co-authored-by: JJ Kasper <jj@jjsweb.site>

--- a/docs/02-app/01-building-your-application/03-rendering/04-edge-and-nodejs-runtimes.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/04-edge-and-nodejs-runtimes.mdx
@@ -27,7 +27,9 @@ There are many considerations to make when choosing a runtime. This table shows 
 | Security                                                                                                                                            | Normal | High       | High             |
 | Latency                                                                                                                                             | Normal | Low        | Lowest           |
 | npm Packages                                                                                                                                        | All    | All        | A smaller subset |
-| Revalidation                                                                                                                                        | Yes    | Yes        | No               |
+| [Static Rendering](/docs/app/building-your-application/rendering/server-components#static-rendering-default)                                        | Yes    | Yes        | No               |
+| [Dynamic Rendering](/docs/app/building-your-application/rendering/server-components#dynamic-rendering)                                              | Yes    | Yes        | Yes              |
+| [Data Revalidation w/ `fetch`](/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#revalidating-data)               | Yes    | Yes        | Yes              |
 
 ### Edge Runtime
 
