--- a/docs/02-app/02-api-reference/04-functions/revalidateTag.mdx
+++ b/docs/02-app/02-api-reference/04-functions/revalidateTag.mdx
@@ -3,7 +3,7 @@ title: revalidateTag
 description: API Reference for the revalidateTag function.
 ---
 
-`revalidatePath` allows you to purge [cached data](/docs/app/building-your-application/caching) on-demand for a specific cache tag.
+`revalidateTag` allows you to purge [cached data](/docs/app/building-your-application/caching) on-demand for a specific cache tag.
 
 > **Good to know**:
 >
