--- a/docs/02-app/01-building-your-application/07-configuring/15-content-security-policy.mdx
+++ b/docs/02-app/01-building-your-application/07-configuring/15-content-security-policy.mdx
@@ -30,7 +30,7 @@ Even though CSPs are designed to block malicious scripts, there are legitimate s
 
 ### Adding a nonce with Middleware
 
-[Middleware](/docs/app/building-your-application/routing/middleware) enables you to headers and generate nonces before the page renders.
+[Middleware](/docs/app/building-your-application/routing/middleware) enables you to add headers and generate nonces before the page renders.
 
 Every time a page is viewed, a fresh nonce should be generated. This means that you **must use dynamic rendering to add nonces**.
 
@@ -55,7 +55,7 @@ export function middleware(request: NextRequest) {
     upgrade-insecure-requests;
 `
 
-  const requestHeaders = new Headers(request.headers)
+  const requestHeaders = new Headers()
   requestHeaders.set('x-nonce', nonce)
   requestHeaders.set(
     'Content-Security-Policy',
@@ -64,6 +64,7 @@ export function middleware(request: NextRequest) {
   )
 
   return NextResponse.next({
+    headers: requestHeaders,
     request: {
       headers: requestHeaders,
     },
@@ -90,7 +91,7 @@ export function middleware(request) {
     upgrade-insecure-requests;
 `
 
-  const requestHeaders = new Headers(request.headers)
+  const requestHeaders = new Headers()
   requestHeaders.set('x-nonce', nonce)
   requestHeaders.set(
     'Content-Security-Policy',
@@ -99,6 +100,7 @@ export function middleware(request) {
   )
 
   return NextResponse.next({
+    headers: requestHeaders,
     request: {
       headers: requestHeaders,
     },
@@ -107,6 +109,50 @@ export function middleware(request) {
 ```
 
 By default, Middleware runs on all requests. You can filter Middleware to run on specific paths using a [`matcher`](/docs/app/building-your-application/routing/middleware#matcher).
+
+We recommend ignoring matching prefetches (from `next/link`) and static assets that don't need the CSP header.
+
+```ts filename="middleware.ts" switcher
+export const config = {
+  matcher: [
+    /*
+     * Match all request paths except for the ones starting with:
+     * - api (API routes)
+     * - _next/static (static files)
+     * - _next/image (image optimization files)
+     * - favicon.ico (favicon file)
+     */
+    {
+      source: '/((?!api|_next/static|_next/image|favicon.ico).*)',
+      missing: [
+        { type: 'header', key: 'next-router-prefetch' },
+        { type: 'header', key: 'purpose', value: 'prefetch' },
+      ],
+    },
+  ],
+}
+```
+
+```js filename="middleware.js" switcher
+export const config = {
+  matcher: [
+    /*
+     * Match all request paths except for the ones starting with:
+     * - api (API routes)
+     * - _next/static (static files)
+     * - _next/image (image optimization files)
+     * - favicon.ico (favicon file)
+     */
+    {
+      source: '/((?!api|_next/static|_next/image|favicon.ico).*)',
+      missing: [
+        { type: 'header', key: 'next-router-prefetch' },
+        { type: 'header', key: 'purpose', value: 'prefetch' },
+      ],
+    },
+  ],
+}
+```
 
 ### Reading the nonce
 
