--- a/docs/02-app/02-api-reference/04-functions/redirect.mdx
+++ b/docs/02-app/02-api-reference/04-functions/redirect.mdx
@@ -9,23 +9,16 @@ If you need to redirect to a 404, use the [`notFound` function](/docs/app/api-re
 
 ## Parameters
 
-The `redirect` function accepts the following arguments:
+The `redirect` function accepts two arguments:
 
 ```js
-redirect(path, type, permanent)
-
-// or you can also use named parameters to omit optional parameters
-redirect({
-  path: '/redirect-to',
-  permanent: true,
-})
+redirect(path, type)
 ```
 
-| Parameter   | Type                                                          | Description                                                                        |
-| ----------- | ------------------------------------------------------------- | ---------------------------------------------------------------------------------- |
-| `path`      | `string`                                                      | The URL to redirect to. Can be a relative or absolute path.                        |
-| `type`      | `'replace'` (default) or `'push'` (default in Server Actions) | The type of redirect to perform.                                                   |
-| `permanent` | `false` (default) or `true`                                   | `true` will use the `308` status code, and `false` will use the `307` status code. |
+| Parameter | Type                                                          | Description                                                 |
+| --------- | ------------------------------------------------------------- | ----------------------------------------------------------- |
+| `path`    | `string`                                                      | The URL to redirect to. Can be a relative or absolute path. |
+| `type`    | `'replace'` (default) or `'push'` (default in Server Actions) | The type of redirect to perform.                            |
 
 By default, `redirect` will use `push` (adding a new entry to the browser history stack) in [Server Actions](/docs/app/building-your-application/data-fetching/server-actions) and `replace` (replacing the current URL in the browser history stack) everywhere else. You can override this behavior by specifying the `type` parameter.
 
