--- a/docs/02-app/02-api-reference/04-functions/permanentRedirect.mdx
+++ b/docs/02-app/02-api-reference/04-functions/permanentRedirect.mdx
@@ -1,6 +1,6 @@
 ---
 title: permanentRedirect
-description: API Reference for the redirect function.
+description: API Reference for the permanentRedirect function.
 ---
 
 The `permanentRedirect` function allows you to redirect the user to another URL. `permanentRedirect` can be used in Server Components, Client Components, [Route Handlers](/docs/app/building-your-application/routing/route-handlers), and [Server Actions](/docs/app/building-your-application/data-fetching/server-actions).
