--- a/docs/02-app/02-api-reference/04-functions/permanentRedirect.mdx
+++ b/docs/02-app/02-api-reference/04-functions/permanentRedirect.mdx
@@ -7,7 +7,7 @@ The `permanentRedirect` function allows you to redirect the user to another URL.
 
 When used in a React Server Component (e.g., with a `<Suspense>` boundary), this will insert a meta tag to emit the redirect on the client side. Otherwise, it will serve a 308 (Permanent) HTTP redirect response to the caller.
 
-If you need to redirect to a 404, use the [`notFound` function](/docs/app/api-reference/functions/not-found) instead.
+If a resource doesn't exist, you can use the [`notFound` function](/docs/app/api-reference/functions/not-found) instead.
 
 > **Good to know**: If you prefer to return a 307 (Temporary) HTTP redirect instead of 308 (Permanent), you can use the [`redirect` function](/docs/app/api-reference/functions/redirect) instead.
 
