docs: fix small typo

--- a/docs/02-app/01-building-your-application/04-caching/index.mdx
+++ b/docs/02-app/01-building-your-application/04-caching/index.mdx
@@ -535,7 +535,7 @@ See the [`cookies`](/docs/app/api-reference/functions/cookies) API reference.
 
 ### Segment Config Options
 
-The Route Segment Config options can be used override the route segment defaults or when you're not able to use the `fetch` API (e.g. database client or 3rd party libraries).
+The Route Segment Config options can be used to override the route segment defaults or when you're not able to use the `fetch` API (e.g. database client or 3rd party libraries).
 
 The following Route Segment Config options will opt out of the Data Cache and Full Route Cache:
 
