--- a/docs/02-app/01-building-your-application/08-upgrading/03-from-vite.mdx
+++ b/docs/02-app/01-building-your-application/08-upgrading/03-from-vite.mdx
@@ -8,23 +8,23 @@ This guide will help you migrate an existing Vite application to Next.js.
 
 ## Why Switch?
 
-There are several reasons why you would want to switch to Next.js:
+There are several reasons why you might want to switch from Vite to Next.js:
 
 1. **Slow initial page loading time**: If you have built your application with the [default Vite
    plugin for React](https://github.com/vitejs/vite-plugin-react/tree/main/packages/plugin-react),
-   your application is a purely client-side application. Client-side applications — also known as
-   single-page applications (SPAs) — often suffer from a slow initial page loading time. This
+   your application is a purely client-side application. Client-side only applications, also known as
+   single-page applications (SPAs), often experience slow initial page loading time. This
    happens due to a couple of reasons:
    1. The browser needs to wait for the React code and your entire application bundle to download
       and run before your code is able to send requests to load some data.
    1. Your application code grows with every new feature and extra dependency you add.
-1. **No automatic code splitting**: The previous issue can be somewhat managed with code splitting.
+1. **No automatic code splitting**: The previous issue of slow loading times can be somewhat managed with code splitting.
    However, if you try to do code splitting manually, you'll often make performance worse. It's easy
    to inadvertently introduce network waterfalls when code-splitting manually. Next.js provides
    automatic code splitting built into its router.
 1. **Network waterfalls**: A common cause of poor performance occurs when applications make
    sequential client-server requests to fetch data. One common pattern for data fetching in an SPA
-   is to initially render a placeholder and then fetch data after the component has mounted.
+   is to initially render a placeholder, and then fetch data after the component has mounted.
    Unfortunately, this means that a child component that fetches data can't start fetching until
    the parent component has finished loading its own data. On Next.js,
    [this issue is resolved](https://github.com/reactjs/rfcs/blob/main/text/0188-server-components.md#no-client-server-waterfalls)
@@ -34,11 +34,11 @@ There are several reasons why you would want to switch to Next.js:
    with Next.js, you can be more intentional about which parts of your UI you want to load first and
    in what order without introducing network waterfalls. This enables you to build pages that are
    faster to load and also eliminate [layout shifts](https://web.dev/cls/).
-1. **Choose the data fetching strategy**: depending on your need, Next.js allows you to choose your
+1. **Choose the data fetching strategy**: Depending on your needs, Next.js allows you to choose your
    data fetching strategy on a page and component basis. You can decide to fetch at build time, at
    request time on the server, or on the client. For example, you can fetch data from your CMS and
    render your blog posts at build time, which can then be efficiently cached on a CDN.
-1. **Middleware**: The [Next.js middleware](/docs/app/building-your-application/routing/middleware)
+1. **Middleware**: [Next.js Middleware](/docs/app/building-your-application/routing/middleware)
    allows you to run code on the server before a request is completed. This is especially useful to
    avoid having a flash of unauthenticated content when the user visits an authenticated-only page
    by redirecting the user to a login page. The middleware is also useful for experimentation and
@@ -77,6 +77,8 @@ const nextConfig = {
 export default nextConfig
 ```
 
+> **Good to know:** You can use either `.js` or `.mjs` for your Next.js configuration file.
+
 ### Step 3: Update TypeScript Configuration
 
 If you're using TypeScript, you need to update your `tsconfig.json` file with the following changes
@@ -92,7 +94,7 @@ to make it compatible with Next.js. If you're not using TypeScript, you can skip
 8. Set [`forceConsistentCasingInFileNames`](https://www.typescriptlang.org/tsconfig#forceConsistentCasingInFileNames) to `true`: `"forceConsistentCasingInFileNames": true`
 9. Set [`incremental`](https://www.typescriptlang.org/tsconfig#incremental) to `true`: `"incremental": true`
 
-Here's an example of a working `tsconfig.json` file with those changes:
+Here's an example of a working `tsconfig.json` with those changes:
 
 ```json filename="tsconfig.json"
 {
@@ -393,13 +395,13 @@ export default function Page() {
 
 This file contains a `<Page>` component which is marked as a
 [Client Component](/docs/getting-started/react-essentials#client-components) by the `'use client'`
-directive. Without that directive the component would have been a
+directive. Without that directive, the component would have been a
 [Server Component](/getting-started/react-essentials#server-components).
 
-On Next.js, Components are pre-rendered
+In Next.js, Components are prerendered
 ([SSR](/docs/app/building-your-application/rendering#component-level-client-and-server-rendering))
 by default before being sent to the client, but since we want to first have a purely client-side
-application, you need to tell Next.js to disable the pre-rendering for the `<App>` component by
+application, you need to tell Next.js to disable the prerendering for the `<App>` component by
 dynamically importing it with the `ssr` option set to `false`:
 
 ```tsx
@@ -528,7 +530,7 @@ hopefully see your application now running on Next.js.
 If your application followed a conventional Vite configuration, this is all you would need to do
 to have a working version of your application.
 
-> **Example:** Check out [this Pull Request](https://github.com/inngest/vite-to-nextjs/pull/1) for a
+> **Example:** Check out [this pull request](https://github.com/inngest/vite-to-nextjs/pull/1) for a
 > working example of a Vite application migrated to Next.js.
 
 ### Step 9: Clean Up
@@ -549,11 +551,9 @@ single-page application. However, you aren't yet taking advantage of most of Nex
 you can now start making incremental changes to reap all the benefits. Here's what you might want to
 do next:
 
-- Enable pre-rendering (SSR) of your application by first making sure to
-  [safely access Web APIs](http://web.archive.org/web/20230318161007/https://nextjs.org/docs/migrating/from-create-react-app#safely-accessing-web-apis).
 - Migrate from React Router to the [Next.js App Router](/docs/app/building-your-application/routing) to get:
   - Automatic code splitting
-  - [Streaming Server Rendering](/docs/app/building-your-application/routing/loading-ui-and-streaming)
+  - [Streaming Server-Rendering](/docs/app/building-your-application/routing/loading-ui-and-streaming)
   - [React Server Components](/docs/getting-started/react-essentials#server-components)
 - [Optimize images with the `<Image>` component](/docs/app/building-your-application/optimizing/images)
 - [Optimize fonts with `next/font`](/docs/app/building-your-application/optimizing/fonts)
