--- a/docs/03-pages/01-building-your-application/07-deploying/04-ci-build-caching.mdx
+++ b/docs/03-pages/01-building-your-application/07-deploying/04-ci-build-caching.mdx
@@ -129,7 +129,7 @@ Using Azure Pipelines' [Cache task](https://docs.microsoft.com/en-us/azure/devop
 
 ### Monorepos
 
-In a monorepo, you might have multiple Next.js apps in subdirectories. To ensure caching works for all these apps, modify your cache path as follows
+In a monorepo, you might have multiple Next.js apps in subdirectories. To ensure caching works for all of these apps, modify your cache path as follows:
 
 `path: ${{ github.workspace }}/.next/cache`
 
