--- a/docs/02-app/02-api-reference/04-functions/revalidatePath.mdx
+++ b/docs/02-app/02-api-reference/04-functions/revalidatePath.mdx
@@ -41,22 +41,22 @@ export default async function submit() {
 ### Route Handler
 
 ```ts filename="app/api/revalidate/route.ts" switcher
-import { revalidatePath } from 'next/cache';
-import { NextRequest, NextResponse } from 'next/server';
+import { revalidatePath } from 'next/cache'
+import { NextRequest, NextResponse } from 'next/server'
 
 export async function GET(request: NextRequest) {
-  const path = request.nextUrl.searchParams.get('path');
+  const path = request.nextUrl.searchParams.get('path')
 
   if (path) {
-    revalidatePath(path);
-    return NextResponse.json({ revalidated: true, now: Date.now() });
+    revalidatePath(path)
+    return NextResponse.json({ revalidated: true, now: Date.now() })
   }
 
   return NextResponse.json({
     revalidated: false,
     now: Date.now(),
     message: 'Missing path to revalidate',
-  });
+  })
 }
 ```
 
@@ -66,7 +66,16 @@ import { revalidatePath } from 'next/cache'
 
 export async function GET(request) {
   const path = request.nextUrl.searchParams.get('path')
-  revalidatePath(path)
-  return NextResponse.json({ revalidated: true, now: Date.now() })
+
+  if (path) {
+    revalidatePath(path)
+    return NextResponse.json({ revalidated: true, now: Date.now() })
+  }
+
+  return NextResponse.json({
+    revalidated: false,
+    now: Date.now(),
+    message: 'Missing path to revalidate',
+  })
 }
 ```
