Update 03-linking-and-navigating.mdx: define const router to disabling scroll

--- a/docs/02-app/01-building-your-application/01-routing/03-linking-and-navigating.mdx
+++ b/docs/02-app/01-building-your-application/01-routing/03-linking-and-navigating.mdx
@@ -121,6 +121,8 @@ The default behavior of the Next.js App Router is to scroll to the top of a new 
 // useRouter
 import { useRouter } from 'next/navigation'
 
+const router = useRouter()
+
 router.push('/dashboard', { scroll: false })
 ```
 
