Fixed fallback prop value in first example - value `true` was giving errors and beginners had problems

--- a/docs/03-pages/01-building-your-application/03-data-fetching/02-get-static-paths.mdx
+++ b/docs/03-pages/01-building-your-application/03-data-fetching/02-get-static-paths.mdx
@@ -28,7 +28,7 @@ export const getStaticPaths: GetStaticPaths = async () => {
         },
       }, // See the "paths" section below
     ],
-    fallback: true, // false or "blocking"
+    fallback: false, // false or "blocking"
   }
 }
 
