docs: Fix typo in app/building-your-application/caching
- `options.next.tags` is correct (before: `options.next.tag`)

--- a/docs/02-app/01-building-your-application/04-caching/index.mdx
+++ b/docs/02-app/01-building-your-application/04-caching/index.mdx
@@ -476,7 +476,7 @@ fetch(`https://...`, { next: { revalidate: 3600 } })
 
 See the [`fetch` API reference](/docs/app/api-reference/functions/fetch) for more options.
 
-### `fetch options.next.tag` and `revalidateTag`
+### `fetch options.next.tags` and `revalidateTag`
 
 Next.js has a cache tagging system for fine-grained data caching and revalidation.
 
