fix redirect bug in example
`pathname` already includes a slash which results in a bad redirect

--- a/docs/02-app/01-building-your-application/01-routing/13-internationalization.mdx
+++ b/docs/02-app/01-building-your-application/01-routing/13-internationalization.mdx
@@ -54,7 +54,7 @@ export function middleware(request) {
     // e.g. incoming request is /products
     // The new URL is now /en-US/products
     return NextResponse.redirect(
-      new URL(`/${locale}/${pathname}`, request.url)
+      new URL(`/${locale}${pathname}`, request.url)
     )
   }
 }
