--- a/docs/02-app/02-api-reference/02-file-conventions/template.mdx
+++ b/docs/02-app/02-api-reference/02-file-conventions/template.mdx
@@ -25,7 +25,7 @@ export default function Template({ children }) {
   height="444"
 />
 
-While less common, you might choose a template over a layout if you want to:
+While less common, you might choose a template over a layout if you want:
 
 - Features that rely on `useEffect` (e.g logging page views) and `useState` (e.g a per-page feedback form).
 - To change the default framework behavior. For example, Suspense Boundaries inside layouts only show the fallback the first time the Layout is loaded and not when switching pages. For templates, the fallback is shown on each navigation.
