--- a/docs/02-app/index.mdx
+++ b/docs/02-app/index.mdx
@@ -35,7 +35,7 @@ You can use [`redirect`](/docs/app/api-reference/functions/redirect) to redirect
 
 Here are some common authentication solutions that support the App Router:
 
-- [NextAuth](https://next-auth.js.org/configuration/nextjs#in-app-router)
+- [NextAuth.js](https://next-auth.js.org/configuration/nextjs#in-app-router)
 - [Clerk](https://clerk.com/docs/quickstarts/nextjs)
 - [Auth0](https://github.com/auth0/nextjs-auth0#app-router)
 - Or manually handling sessions or JWTs
