docs: use satisfies for TS code blocks

--- a/docs/03-pages/01-building-your-application/03-data-fetching/02-get-static-paths.mdx
+++ b/docs/03-pages/01-building-your-application/03-data-fetching/02-get-static-paths.mdx
@@ -19,7 +19,7 @@ type Repo = {
   stargazers_count: number
 }
 
-export const getStaticPaths: GetStaticPaths = async () => {
+export const getStaticPaths = async () => {
   return {
     paths: [
       {
@@ -30,15 +30,15 @@ export const getStaticPaths: GetStaticPaths = async () => {
     ],
     fallback: true, // false or "blocking"
   }
-}
+} satisfies GetStaticPaths
 
-export const getStaticProps: GetStaticProps<{
-  repo: Repo
-}> = async () => {
+export const getStaticProps = async () => {
   const res = await fetch('https://api.github.com/repos/vercel/next.js')
   const repo = await res.json()
   return { props: { repo } }
-}
+} satisfies GetStaticProps<{
+  repo: Repo
+}>
 
 export default function Page({
   repo,
